# Qalam

./: .firebaserc  .gitignore  CLAUDE.md  README.md  analysis_options.yaml  delete.html  firebase.json  firestore.rules  flutter_launcher_icons.yaml  index.html  l10n.yaml  privacy.html  pubspec.yaml  terms.html
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.planning/: .pending-auth-captures.jsonl  HANDOFF-ALL-LETTERS.md  PHASE-18-BRIEF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TEAM-WORKFLOW.md  config.json
android/: key.properties.example
docs/: RESEARCH_BRIEF.md  USER_STORIES.md
lib/: app.dart  firebase_options.dart  main.dart
records/: 12.json
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
server/app/: __init__.py  auth.py  criterion_ema.py  curriculum.py  evidence.py  faithfulness.py  graph.py  image_judge.py  main.py  models.py  prompts.py  schema.py  state.py  tools.py
server/app/curriculum_data/: __init__.py  baa_authored_ids.json  curriculum_graph.json  exercises.json  generate.py
server/app/jobs/: __init__.py  compile_profiles.py
server/app/nodes/: __init__.py  _retry.py  analyze.py  coach.py  plan.py
server/tests/: conftest.py  test_auth.py  test_compile_profiles.py  test_criteria_contract.py  test_criterion_ema.py  test_endpoint.py  test_evidence.py  test_faithfulness.py  test_graph.py  test_grounding.py  test_payload_nonpii.py  test_plan_graph.py  test_schema_forbid.py  test_tools_schema.py
server/tests/fixtures/: faithfulness_set.jsonl
server/tests/test_eval/: JUDGE_RUBRIC.md  gold_set.jsonl  run_baseline.py  run_eval.py  run_judge.py  selection_gold_set.jsonl  test_eval_harness.py  test_selection_dimension.py  test_variety.py
test/: direction_test.dart  flutter_test_config.dart  glyph_audit_golden_test.dart  (+4 more)
(+1329 files in other folders)
